log
Fri, May 16, 2025 10:27:02 PM: 
 sudoku.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3f0e54c
Sat, May 17, 2025 12:24:45 AM: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
465f069
Sat, May 17, 2025 12:26:56 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
833ed4d
Sat, May 17, 2025 12:36:04 AM: 
 sudoku.c | 36 ++++++++++++++++++++++++++++++++++++
 1 file changed, 36 insertions(+)
 tests:  6|2
total_score: 45/70
b8514e9
Sat, May 17, 2025 12:38:01 AM: 
 sudoku.c | 24 ++++++++++++------------
 1 file changed, 12 insertions(+), 12 deletions(-)
 tests:  6|2
total_score: 45/70
08e07f9
Sat, May 17, 2025 12:54:35 AM: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  7|1
total_score: 55/70
ae9ef9d
Sat, May 17, 2025  4:28:31 AM: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:129:15: error: unused variable 'current' [-Werror=unused-variable]
         Node* current = top(S);
               ^~~~~~~
cc1.exe: all warnings being treated as errors
f924a07
Sat, May 17, 2025  4:36:18 AM: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  10|0
total_score: 70/70
0a91166
Sat, May 17, 2025  4:38:05 AM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|0
total_score: 70/70
114da79
